--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,18 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile "org.jetbrains.anko:anko:$anko_version"
 
-    // Twitter Login
+    // Twitter-Firebase Login
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.twitter.sdk.android:twitter-core:3.1.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
+    compile 'com.google.firebase:firebase-auth:11.4.0'
+
     testCompile 'junit:junit:4.12'
 }
 repositories {
     mavenCentral()
+    maven { url "https://maven.google.com" }
 }
+
+apply plugin: 'com.google.gms.google-services'
